--- a/index.html
+++ b/index.html
@@ -174,8 +174,9 @@
   </style>
 </head>
 <body>
-  <button class="theme-toggle" onclick="toggleTheme()">Toggle Theme</button>
+  <button class="theme-toggle" onclick="toggleTheme()">Theme</button>
   <div class="container">
+    <h2>Lofos Organization</h2>
     <h2>রক্ত দাতার তালিকা</h2>
     <!-- Input Fields with Error Messages -->
     <div>
